packages/taquito-michel-codec/test/contracts_015/ill_typed/invalid_self_entrypoint.tz
parameter (or (or (nat %A) (bool %B)) (or %maybe_C (unit %Z) (string %C)));
storage unit;
code {
       DROP;
       # This entrypoint does not exist
       SELF %D; DROP;
       UNIT;
       NIL operation;
       PAIR;
     }
